--- a/juatsapp_Presentacion/src/main/java/forms/NuevoChat.form
+++ b/juatsapp_Presentacion/src/main/java/forms/NuevoChat.form
@@ -151,6 +151,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Crear Chat"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txt_contacto">
         </Component>
