--- a/juatsapp_Presentacion/src/main/java/forms/Perfil.form
+++ b/juatsapp_Presentacion/src/main/java/forms/Perfil.form
@@ -185,6 +185,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txp_contra">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txt_direccion">
         </Component>
